feat(1822): virtual equipment low impact
